--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ static/favicon.ico
 static/img/logo.png
 script.sql
 examples.js
+views/corona-free-dark-bootstrap-admin-template-1.0.0/
+views/corona-free-dark/
